# simple_transaction_service

./: .gitignore  API-Documentation.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  check-rate-limit.bash  docker-compose.yml  webhook-server.js
.sqlx/: query-00cab9c5ebac59bc3f95b022159df46aa3259bfe505ffb41bf1e036207da0a9a.json  query-0dde77ddd96a279cf3ccacdab635625b7d99bedb88f614577a7e703ee4ee6a1e.json  query-0f03d477cb719d3280d3f6ba5de0b977f4ee638609b17707550806be842e56fb.json  query-0f90580770105ed13e107f91781a02fd7669169dfe886013daa5fb8a0ecdb33b.json  query-0fb86f82f1a29b2feb6e28f43bc4c83ed8f426044104e73e917c6ed6e6f88f12.json  query-26a907c7d827bf0284f984dd54bf11274d42bca1572ba4cab5e881ab2d9f7a98.json  query-330e122da8394fed20a709ae659218d0352d5c64f9abf1b4c115ee5dc0fb1cd9.json  query-340415900ec480e2d33511a8e88de1fca32ffafc8b1d035d8d8e6596559cef00.json  query-58788f021b5f55cdf9a6727db7dbf71b9b8640f69520264aba7bf2384e1e3583.json  query-5917b8456102f2382b242d29764bc8bfeec3d2564806f2b6f68630dd07602bc2.json  query-663ff7550eed1e104846dc11dafc08bcf32f6aca05c31cddb617d0f78ef098d8.json  query-6c764447b93355aae73101261bbf01877a6472467111721bdb9f79ff701c7b30.json  query-70855acbcd1148ca85e6bd3fa3e47d18d25e5932af615738a8a12c9c8adcf565.json  query-7be8b0f39536c72e251ee8b740b43c4a9637aa61f2dee128e1486c97544e4816.json  query-80461bc0d424f397f9ea0f74b3cf6d3418ab30c359d680a57ae9ed28ee58c0e7.json  query-812d408c448081d23fb7866c1e6c2705485cc862dd029c842b67c709f4947684.json  query-8ba7465a08f7cd12d9b108922525261b375c1d0c8c50ff4aae2831ce670f04c7.json  (+4 more)
src/: errors.rs  lib.rs  (+3 more)
(+43 files in other folders)
