[package]
name = "simple_transaction_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
