[package]
name = "simple_transaction_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.4"
actix-rt = "2.11.0"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
reqwest = "0.12.23"
serde = { version = "1.0.225", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_valid = "1.0.5"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
